<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/normal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/quiztitle" />

        <EditText
            android:id="@+id/name_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/doubled"
            android:hint="@string/userName"
            android:inputType="textCapWords"
            android:textSize="@dimen/textXL" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half"
            android:layout_marginTop="@dimen/normal"
            android:text="@string/question1"
            android:textSize="@dimen/textL" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"
                android:textSize="@dimen/textXL" />

            <RadioButton
                android:id="@+id/radioButton12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2"
                android:textSize="@dimen/textXL" />

            <RadioButton
                android:id="@+id/radioButton13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="3"
                android:textSize="@dimen/textXL" />

            <RadioButton
                android:id="@+id/radioButton14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="4"
                android:textSize="@dimen/textXL" />

            <RadioButton
                android:id="@+id/radioButton15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="5"
                android:textSize="@dimen/textXL" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half"
            android:text="@string/question2"
            android:textSize="@dimen/textL" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/extended"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/half"
                android:layout_weight="1"
                android:paddingLeft="@dimen/half"
                android:text="@string/q2Option1"
                android:textSize="@dimen/textL" />

            <RadioButton
                android:id="@+id/radioButton22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/half"
                android:layout_weight="1"
                android:paddingLeft="@dimen/half"
                android:text="@string/q2Option2"
                android:textSize="@dimen/textL" />

            <RadioButton
                android:id="@+id/radioButton23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/half"
                android:text="@string/q2Option3"
                android:textSize="@dimen/textL" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3"
            android:textSize="@dimen/textL" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half"
            android:text="@string/questionMultipleNote"
            android:textSize="@dimen/textM" />

        <CheckBox
            android:id="@+id/checkBox31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:paddingLeft="@dimen/half"
            android:text="@string/q3Option1"
            android:textSize="@dimen/textL" />

        <CheckBox
            android:id="@+id/checkBox32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:paddingLeft="@dimen/half"
            android:text="@string/q3Option2"
            android:textSize="@dimen/textL" />

        <CheckBox
            android:id="@+id/checkBox33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:paddingLeft="@dimen/half"
            android:text="@string/q3Option3"
            android:textSize="@dimen/textL" />

        <CheckBox
            android:id="@+id/checkBox34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/extended"
            android:paddingLeft="@dimen/half"
            android:text="@string/q3Option4"
            android:textSize="@dimen/textL" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half"
            android:text="@string/question4"
            android:textSize="@dimen/textL" />

        <RadioGroup
            android:id="@+id/radioGroup4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/extended"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/half"
                android:text="@string/q4Option1"
                android:textSize="@dimen/textL" />

            <RadioButton
                android:id="@+id/radioButton42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/half"
                android:text="@string/q4Option2"
                android:textSize="@dimen/textL" />

            <RadioButton
                android:id="@+id/radioButton43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/half"
                android:text="@string/q4Option3"
                android:textSize="@dimen/textL" />

            <RadioButton
                android:id="@+id/radioButton44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/half"
                android:text="@string/q4Option4"
                android:textSize="@dimen/textL" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half"
            android:text="@string/question5"
            android:textSize="@dimen/textL" />

        <RadioGroup
            android:id="@+id/radioGroup5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/extended"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/half"
                android:text="@string/q5Option1"
                android:textSize="@dimen/textL" />

            <RadioButton
                android:id="@+id/radioButton52"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/half"
                android:text="@string/q5Option2"
                android:textSize="@dimen/textL" />

            <RadioButton
                android:id="@+id/radioButton53"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/half"
                android:text="@string/q5Option3"
                android:textSize="@dimen/textL" />

            <RadioButton
                android:id="@+id/radioButton54"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/half"
                android:text="@string/q5Option4"
                android:textSize="@dimen/textL" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half"
            android:text="@string/question6"
            android:textSize="@dimen/textL" />

        <RadioGroup
            android:id="@+id/radioGroup6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/extended"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton61"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/half"
                android:text="@string/q6Option1"
                android:textSize="@dimen/textL" />

            <RadioButton
                android:id="@+id/radioButton62"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/half"
                android:text="@string/q6Option2"
                android:textSize="@dimen/textL" />

            <RadioButton
                android:id="@+id/radioButton63"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/half"
                android:text="@string/q6Option3"
                android:textSize="@dimen/textL" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/half"
                android:text="@string/beforeSubmitting"
                android:textAllCaps="true"
                android:textSize="@dimen/textM" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:paddingLeft="@dimen/half"
                android:text="@string/condition"
                android:textSize="@dimen/textL" />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/half"
                android:background="@color/colorPrimary"
                android:onClick="calculateScore"
                android:padding="@dimen/normal"
                android:text="@string/submit"
                android:textSize="@dimen/textM" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
